Revert "Count API calls by authentication status"
This reverts commit 9b835633ab302d5320a99363dae23340f78d2fe6.